custom partitioner nad serializer

--- a/kafka_notes.ipynb
+++ b/kafka_notes.ipynb
@@ -48,11 +48,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fd51c72",
+   "cell_type": "markdown",
+   "id": "22ce847a",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Partitioner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b05220e",
+   "metadata": {},
+   "source": [
+    "Default partitioner\n",
+    "- If a partition is specified use it\n",
+    "- if no partition is specified but a key is present choose a partition based on a hash of the key\n",
+    "- If no partition or key is present choose a partition in a round-robin fashion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc7784ab",
+   "metadata": {},
+   "source": [
+    "Do not use key for partitioning because different key-value pairs can end up in the same partition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15fafe8e",
+   "metadata": {},
+   "source": [
+    "# Serializer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3e39226",
+   "metadata": {},
+   "source": [
+    "### Definition: \n",
+    "Transfering a data structure to a series of bytes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb4c2742",
+   "metadata": {},
+   "source": [
+    "### Example - Serialize & Deserialize\n",
+    "- Create a Customer class\n",
+    "- Create a producer\n",
+    "- Create a serializer\n",
+    "- Create a deserializer\n",
+    "- Create a consumer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3e8ccf0",
+   "metadata": {},
    "source": []
   }
  ],
